# ri

./: Cargo.toml  bacon.toml
benches/: constant_clone.rs
res/aoc/: 10g.ri  10s.ri  11g.ri  11s.ri  12g.ri  12s.ri  13g.ri  13s.ri  14g.ri  14s.ri  15g.ri  15s.ri  16g.ri  16s.ri  17g.ri  17s.ri  18g.ri  18s.ri  19g.ri  19s.ri  1g.ri  1s.ri  20g.ri  20s.ri  21g.ri  21s.ri  22g.ri  22s.ri  23g.ri  23s.ri  24g.ri  24s.ri  25s.ri  2g.ri  2s.ri  3g.ri  3s.ri  4g.ri  4s.ri  5g.ri  (+10 more)
res/bench/: fib30.ri
res/examples/: ex.py  ex0.ri  ex0_clean.ri  ex1.ri  ex2.ri  ex3.ri  ex4.ri  ex5.ri  ex6.ri  ex7.ri  ex8.ri
src/: main.rs  parse.rs
tests/: aoc.rs  examples.rs  parse.rs
