[package]
name = "ri"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
indexmap = "2.6.0"
itertools = "0.13.0"
log = "0.4.22"
thiserror = "2.0.3"

[dev-dependencies]
assert_cmd = "2.0.16"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "constant_clone"
harness = false
